objects/AIA_Group__c.object
<CustomObject>
    <fields>
        <fullName>Alpha_Prefix__c</fullName>
        <formula>Group_Structure_Request_Form_Product__r.Alpha_Prefix__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alpha Prefix</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alpha_prefix_Drawloop__c</fullName>
        <formula>IF(  Group_Structure_Request_Form_Product__r.Alpha_Prefix_check__c   = true, 'Yes', 'No')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alpha prefix Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <formula>Group_Structure_Request_Form__r.Implementation__r.Benefit_Request_Form__r.Benefit_Effective_Date__c</formula>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_new_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_Status__c</fullName>
        <label>Employee Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Cobra</fullName>
                </value>
                <value>
                    <fullName>Retiree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_Notes2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Group_Structure_Request_Form_Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Group_Structure_Request_Form__c</field>
                <operation>equals</operation>
                <valueField>AIA_Group_Structure_Form_Product__c.Group_Structure_Request_Form__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AIA_Group_Structure_Form_Product__c</referenceTo>
        <relationshipLabel>Groups</relationshipLabel>
        <relationshipName>Groups</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group_Structure_Request_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Structure Request Form</label>
        <referenceTo>AIA_Group_Structure_Request_Form__c</referenceTo>
        <relationshipLabel>Groups</relationshipLabel>
        <relationshipName>Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan_Code__c</fullName>
        <label>Plan &amp; Code</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Plan code 580 for  DC zip code range &amp; 690 for all others</fullName>
                </value>
                <value>
                    <fullName>Plan code 690 for MD zip code range &amp; 580 for all others</fullName>
                </value>
                <value>
                    <fullName>Plan code 580 for DC</fullName>
                </value>
                <value>
                    <fullName>Plan code 690 for MD</fullName>
                </value>
                <value>
                    <fullName>Plan code 700 for MA</fullName>
                </value>
                <value>
                    <fullName>Plan code 710 for MI</fullName>
                </value>
                <value>
                    <fullName>Plan code 780 for NJ</fullName>
                </value>
                <value>
                    <fullName>Plan code 580</fullName>
                </value>
                <value>
                    <fullName>Plan code 690</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Group_Structure_Request_Form_Product__r.Proposed_Products__r.Plan_Product_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TERM_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <label>Group</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Employee_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <validationRules>
        <fullName>G001_Termination_Date</fullName>
        <active>true</active>
        <description>When Request Type of related GSRF is "Prospect/New", the Term Date must be blank.</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; AND( ISPICKVAL(Group_Structure_Request_Form__r.Implementation__r.Benefit_Request_Form__r.Request_Type__c, 'Prospect/New') , NOT( ISBLANK( TERM_Date__c) ) )</errorConditionFormula>
        <errorDisplayField>TERM_Date__c</errorDisplayField>
        <errorMessage>Termination date not valid for Request Type Prospect/New</errorMessage>
    </validationRules>
</CustomObject>